--- a/index.html
+++ b/index.html
@@ -1143,7 +1143,7 @@
                     </svg>
                 </a>
                 
-                <a href="mailto:hocaogluselim@gmail.com" class="contact-link" aria-label="Email">
+                <a href="mailto:contact@selimhocaoglu.me" class="contact-link" aria-label="Email">
                     <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-mail">
                         <title>Email</title>
                         <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
@@ -1152,7 +1152,7 @@
                 </a>
             </div>
 
-            <a class="email-link" href="mailto:hocaogluselim@gmail.com" data-en="Say Hello" data-tr="Bana Ulaş">Say Hello</a>
+            <a class="email-link" href="mailto:contact@selimhocaoglu.me" data-en="Say Hello" data-tr="Bana Ulaş">Say Hello</a>
         </div>
     </section>
 
